fix: gap 삭제

--- a/topics/style.scss
+++ b/topics/style.scss
@@ -58,7 +58,6 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 40px;
 
   width: fit-content;
   position: relative;
